# event-bridge

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  init_db.py  main.py  pyproject.toml  requirements.txt  run.sh  test_webhooks.py
app/: __init__.py
app/core/: __init__.py  config.py  database.py
app/models/: __init__.py  user.py  webhook.py
app/routes/: __init__.py  auth.py  webhooks.py  websocket.py
app/services/: __init__.py  event_bus.py  forwarder.py
app/utils/: __init__.py  auth.py  websocket.py
static/css/: index.css  login.css  settings.css  webhook_details.css
static/js/: index.js  webhook_details.js
templates/: index.html  login.html  settings.html  webhook_details.html
